updated load more node